# striker

./: .gitignore  MANIFEST.in  README.rst  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
striker/common/: config.py  utils.py
striker/core/: context.py  environment.py
tests/: __init__.py
tests/unit/api/: __init__.py
tests/unit/common/: test_config.py  test_utils.py
tests/unit/core/: test_context.py  test_environment.py
