[metadata]
name = striker
summary = Rackspace Task Runner
description-file =
    README.rst
author = Rackspace Hosting
author-email = striker-dev@rackspace.com
home-page = http://rackspace.com
    Development Status :: 5 Alpha
    Environment :: Development
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    striker

[wheel]
universal = 1
